# tamga

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  eval_leakage_check.py  pyproject.toml
artifacts/: baseline_bpe_200.json  bpe_1000.json  bpe_200.json  bpe_500.json  bpe_sweep_report.md  challenge_mismatch_analysis.md  challenge_mismatch_analysis_v1_1.md  eval_report_challenge.md  eval_report_expanded.md  sp_bpe_1000.model  sp_bpe_1000.vocab  sp_unigram_1000.model  sp_unigram_1000.vocab  stress_public_report.md  v1_1_report.md  v1_2_error_taxonomy_report.md  v1_3_coverage_expanded.md  v1_3_coverage_stress.md  v1_3_public_stress_report.md  v1_4_challenge_mismatch_analysis.md  v1_5_llama_report_challenge.md  v1_5_llama_report_expanded.md  v1_5_mistral_report_challenge.md  v1_5_mistral_report_expanded.md  v1_5_qwen_report_challenge.md  v1_5_qwen_report_expanded.md  v1_5_real_tokenizer_report_all_challenge.md  v1_5_real_tokenizer_report_all_expanded.md  v1_5_real_tokenizer_report_challenge.md  v1_5_real_tokenizer_report_english_smoke.md  v1_5_real_tokenizer_report_expanded.md  v1_5_real_tokenizer_report_multilingual_smoke.md  v1_5_real_tokenizer_report_with_toy_expanded.md  v1_6_ci_all_challenge.md  v1_6_ci_all_en_smoke.md  v1_6_ci_all_expanded.md  v1_6_ci_all_multilingual_smoke.md  v1_6_ci_challenge.md  v1_6_ci_expanded.md  v1_6_fertility_report_demo_corpus.md  (+344 more)
configs/: tokenizer_config.v3_1.draft.json  tokenizer_config.v3_1.sp48k_candidate.json  tokenizer_config.v3_1.sp64k_retrained_candidate.json  tokenizer_config.v3_2.sp48k_integration_smoke.json  tokenizer_config.v3_7.sp64k_stratified_integration_candidate.json  tokenizer_config.v3_8.final.json  v1_7_baselines.toml  v1_7_celik_gold_clean_sample.toml  v1_7_celik_gold_clean_sentencepiece_sweep.toml  v1_7_celik_gold_filtered_sample.toml  v1_7_celik_gold_sentencepiece_pilot_sweep.toml  v1_7_claim_grade_corpus.toml  v1_7_downstream_probe_celik_gold_clean_pilot.toml  v1_7_downstream_probe_celik_gold_pilot.toml  v1_7_downstream_probe_demo.toml  v1_7_sentencepiece_pilot_sweep.toml  v1_7_sentencepiece_sweep.toml  v1_8_hybrid_sentencepiece_sweep.toml  v1_8_local_lm_probe_split.toml  v1_8_tiny_lm_bpb_probe.toml  v1_8_train_only_sentencepiece_sweep.toml  v2_0_candidate_sentencepiece.toml  v2_0_expanded_uds22_sentencepiece.toml  v2_0_safe_uds_sentencepiece.toml  (+29 more)
(+447 files in other folders)
