[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tr-centric-tokenizer"
version = "1.1.0"
description = "A Turkish-centered morphology-aware tokenizer prototype with deterministic suffix splitting, evaluation tools, and BPE baseline comparison."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "tr-centric-tokenizer contributors" }
]
keywords = [
  "tokenizer",
  "turkish",
  "nlp",
  "morphology",
  "bpe",
  "llm",
  "turkic-languages",
  "subword-tokenization"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
tr-tokenizer = "tr_tokenizer.__main__:main"
tr-centric-tokenizer = "tr_tokenizer.__main__:main"

[project.urls]
Repository = "https://github.com/alicelik77/tr-centric-tokenizer"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
norecursedirs = ["pytest-cache-files-*", "tmp*"]
