[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tamga-tokenizer"
version = "3.8.0"
description = "Tamga: a Turkish-first, lossless LLM tokenizer and production corpus toolchain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "celikbros" }
]
keywords = [
  "tokenizer",
  "turkish",
  "nlp",
  "morphology",
  "bpe",
  "llm",
  "turkic-languages",
  "subword-tokenization"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
baselines = [
  "sentencepiece>=0.2",
  "transformers>=4.40",
  "tokenizers>=0.19"
]

[project.scripts]
tamga = "tr_tokenizer.__main__:main"
tr-tokenizer = "tr_tokenizer.__main__:main"
tr-centric-tokenizer = "tr_tokenizer.__main__:main"

[project.urls]
Repository = "https://github.com/celikbros/tamga"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
norecursedirs = ["pytest-cache-files-*", "tmp*"]
